# BA2020_resources

./: README.md
Benchmark/ABox/lubm/: lubm-S1-edb-config-info.txt  lubm-S2-edb-config-info.txt  lubm-S3-edb-config-info.txt  lubm-S4-edb-config-info.txt
Benchmark/TBox/: lubm.owl
ClingoInterface/: CMakeLists.txt
ClingoInterface/src/clingo/java/native/: ControlClingo.cpp  ControlClingo.h  QueryTermIterator.cpp  QueryTermIterator.h  RawTermIterator.cpp  RawTermIterator.h  rulewerk_clingo_Clingo.cpp  rulewerk_clingo_Clingo.h  rulewerk_clingo_TermQueryResultIterator.cpp  rulewerk_clingo_TermQueryResultIterator.h
ClingoInterface/src/clingo/java/rulewerk/clingo/: Clingo.java  Rule.java  Term.java  TermQueryResultIterator.java
examples/clingo/: ClingoVsVlog.java  VLogTest.java
rulewerk-clingo/: .classpath  .project  pom.xml
rulewerk-clingo/src/main/java/org/semanticweb/rulewerk/reasoner/clingo/: AliasHandler.java  CSVloader.java  ClingoKnowledgeBase.java  ClingoQueryResultIterator.java  ClingoReasoner.java  ClingoToModelConverter.java  ModelToClingoConverter.java  Skolemizer.java
rulewerk-clingo/src/test/java/org/semanticweb/rulewerk/reasoner/clingo/: BigDatasetTest.java  LoadRDF.java  QueryTest.java  SetUpClingo.java
tex/: BA-defence.aux  BA-defence.nav  BA-defence.out  BA-defence.tex  BA-defence.toc  bachelor.aux  bachelor.bbl  bachelor.bcf  bachelor.blg  bachelor.dvi  bachelor.out  bachelor.run.xml  bachelor.tex  bachelor.toc  cgvpub.cls  references.bib
